--- a/Assets/AwesomeAttributes/package.json
+++ b/Assets/AwesomeAttributes/package.json
@@ -6,6 +6,11 @@
   "unity": "2019.1",
   "dependencies": {},
 
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/OlegVishnivetsky/awesome-attributes.git"
+  },
+  
   "keywords": [
     "attributes",
     "editor",
